[gd_scene load_steps=15 format=2]

[ext_resource path="res://icons/icon.png" type="Texture" id=1]
[ext_resource path="res://character/2KinematicBody2D.gd" type="Script" id=2]
[ext_resource path="res://icons/pistol.png" type="Texture" id=3]
[ext_resource path="res://icons/rifle.png" type="Texture" id=4]
[ext_resource path="res://icons/lifebar_fill.png" type="Texture" id=5]
[ext_resource path="res://icons/lifebar_bg.png" type="Texture" id=6]
[ext_resource path="res://icons/energy_bar_bg.png" type="Texture" id=7]
[ext_resource path="res://icons/energy_bar_fill.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 38.1564, 35.3064 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.7072, 31.4788 )

[sub_resource type="Animation" id=2]
resource_name = "fast pistol"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Muzzle:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 87.6225, 10.6543 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ammo:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -25.0073, 5.46606 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ammo:rect_size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 248, 75 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ammo:rect_rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = false
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ammo:rect_scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = false
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.4, 0.5 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "pistol"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Muzzle:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 80.9651, 6.21601 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ammo:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -9.91949, -21.8983 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ammo:rect_size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 248, 75 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ammo:rect_rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = false
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ammo:rect_scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = false
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "reload"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "reload2"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 0.0 ]
}

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.149887, -0.149889 )
shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.614716, 0.307358 )
shape = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 25.5156, 11.2199 )
scale = Vector2( 0.0695797, 0.0590798 )
texture = ExtResource( 3 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 80.9651, 6.21601 )

[node name="reloadTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/fast pistol" = SubResource( 2 )
anims/pistol = SubResource( 3 )
anims/reload = SubResource( 4 )
anims/reload2 = SubResource( 5 )

[node name="shoottimer" type="Timer" parent="."]
wait_time = 0.175
autostart = true

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = -49.4661
margin_top = -62.4283
margin_right = 346.534
margin_bottom = -7.42834
rect_scale = Vector2( 0.25, 0.25 )
value = 100.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ammo" type="TextureProgress" parent="."]
margin_left = -48.7593
margin_top = -36.7524
margin_right = 201.241
margin_bottom = 9.24759
rect_scale = Vector2( 0.398845, -0.270306 )
max_value = 20.0
value = 20.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 8 )
fill_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="reloadTimer" to="." method="_on_reloadTimer_timeout"]
[connection signal="timeout" from="shoottimer" to="." method="_on_shoottimer_timeout"]
